Add UI for testing contracts (no file upload currently, just copy/paste). UI does not do anything with results yet (my computer refuses to run oyente/mythril properly). Adding Ace Editor (pre-built) to project.

--- a/Flask/app/templates/base.html
+++ b/Flask/app/templates/base.html
@@ -30,6 +30,9 @@
     <script type="text/javascript" src="static/js/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">       
 
+    <!-- ACE Code Editor -->
+    <script src="static/js/ace-editor/ace.js" type="text/javascript" charset="utf-8"></script>
+
     <!-- Global -->
     <script type="text/javascript" src="static/js/global.js"></script>
 
