Added data display for oyente and mythril, UI now functions at a basic demo level. Please test

--- a/Flask/app/templates/newjob.html
+++ b/Flask/app/templates/newjob.html
@@ -87,7 +87,7 @@
 		<h3> Smart Contract </h3>
 		<div class="editor-container" id="editor"></div>
 	</div>
-	<div class="col-md-4 panel">
+	<div class="col-md-4 panel" id="output">
 		<h3> Output </h3>
 		<button type="button" class="btn btn-primary btn-block" onclick="return submit_job();">Run Tests!</button>
 	</div>
