--- a/Flask/app/templates/base.html
+++ b/Flask/app/templates/base.html
@@ -30,6 +30,11 @@
     <script type="text/javascript" src="static/js/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">       
 
+    <!-- Tabulator -->
+    <script type="text/javascript" src="static/tabulator/js/moment.min.js"></script>
+    <script type="text/javascript" src="static/tabulator/js/tabulator.min.js"></script>
+    <link href="static/tabulator/css/tabulator.min.css" rel="stylesheet">    
+
     <!-- ACE Code Editor -->
     <script src="static/js/ace-editor/ace.js" type="text/javascript" charset="utf-8"></script>
 
