--- a/Flask/app/templates/newjob.html
+++ b/Flask/app/templates/newjob.html
@@ -24,9 +24,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/home">Dashboard</a></li>
-        <li class="active"><a href="/">New Job</a></li>
-        <li><a href="/status">Job Status</a></li>
+        <!-- <li><a href="/home">Dashboard</a></li> -->
+        <li class="active"><a href="/">Test Script</a></li>
+        <!-- <li><a href="/status">Job Status</a></li> -->
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
@@ -76,21 +76,32 @@
 </nav>
 
 <div class="col-lg-12 home"> 
-	<div class="col-md-2 panel"> 
-		<h3> Tools </h3>
-		<input type="checkbox" id="tool-oyente" value="Oyente">Oyente<br>
-		<input type="checkbox" id="tool-mythril" value="Mythril">Mythril<br>
-		<h3> Options </h3>
-		<input type="checkbox" id="option-mutants" value="Mutants">Use Mutants<br>
-	</div>
-	<div class="col-md-6 panel" style="height:750px;">
-		<h3> Smart Contract </h3>
-		<div class="editor-container" id="editor"></div>
-	</div>
-	<div class="col-md-4 panel" id="output">
-		<h3> Output </h3>
-		<button type="button" class="btn btn-primary btn-block" onclick="return submit_job();">Run Tests!</button>
-	</div>
+	<div class="col-md-5 panel" style="height:500px;">
+        <!-- <h3> Smart Contract </h3> -->
+        <div class="editor-container" id="editor" style="height:500px; margin-top: 40px;"></div>
+    </div>
+    <div class="col-md-7 panel">
+        <div class="col-md-12"> 
+            <table class="tbl-options">
+        		<td><input type="checkbox" id="tool-oyente" value="Oyente">Test Oyente</td>
+        		<td><input type="checkbox" id="tool-mythril" value="Mythril">Test Mythril</td>
+                <td> </td>
+        		<td><input type="checkbox" id="option-mutants" value="Mutants">Use Mutants</td>
+            </table>
+    	</div>
+    	
+    	<div class="col-md-12">
+    		<!-- <h3> Output </h3> -->
+    		<button type="button" class="btn btn-primary btn-block" onclick="return submit_job();">Run Tests!</button>
+            <div id="output">
+                <div class="col-md-12" id="stats"></div>
+                <h4 style="display:none" id="id-output1">  </h4>                                
+                <div class="col-md-12" id="output1"></div>
+                <h4 style="display:none" id="id-output2">  </h4>                                
+                <div class="col-md-12" id="output2"></div>
+            </div>
+    	</div>
+    </div>
 </div>
 
 <script>
