--- a/Flask/app/static/css/newjob.css
+++ b/Flask/app/static/css/newjob.css
@@ -23,3 +23,7 @@ td {
 	text-align: center;
 }
 
+.ace_gutter-cell.ace_breakpoint {
+	border-radius: 20px 0px 0px 20px;
+	box-shadow: 0px 0px 1px 1px red inset;
+}
