--- a/Flask/app/templates/newjob.html
+++ b/Flask/app/templates/newjob.html
@@ -85,7 +85,7 @@
             <table class="tbl-options">
         		<td><input type="checkbox" id="tool-oyente" value="Oyente">Test Oyente</td>
         		<td><input type="checkbox" id="tool-mythril" value="Mythril">Test Mythril</td>
-                <td> </td>
+            <td><input type="checkbox" id="tool-smartcheck" value="SmartCheck">Test SmartCheck</td>
         		<td><input type="checkbox" id="option-mutants" value="Mutants">Use Mutants</td>
             </table>
     	</div>
@@ -99,6 +99,8 @@
                 <div class="col-md-12" id="output1"></div>
                 <h4 style="display:none" id="id-output2">  </h4>                                
                 <div class="col-md-12" id="output2"></div>
+                <h4 style="display:none" id="id-output3">  </h4>                                
+                <div class="col-md-12" id="output3"></div>
             </div>
     	</div>
     </div>
