Update to demonstrate what the mutation is

--- a/Flask/app/templates/newjob.html
+++ b/Flask/app/templates/newjob.html
@@ -76,7 +76,7 @@
 </nav>
 
 <div class="col-lg-12 home"> 
-	<div class="col-md-5 panel" style="height:500px;">
+	<div class="col-md-5 panel" id="code-panel" style="height:500px;">
         <!-- <h3> Smart Contract </h3> -->
         <div class="editor-container" id="editor" style="height:500px; margin-top: 40px;"></div>
     </div>
